# Aelkyn

./: .gitignore  :w  CMakeLists.txt  README.md  game.cpp
shaders/: shader.slang  uniform.slang
source/: Application.cpp  Application.hpp  main.cpp
source/core/: Gui.hpp  Window.cpp  Window.hpp
source/game/: Camera.hpp  Input.cpp  Input.hpp
source/gpu/: Device.cpp  Device.hpp
src/: :w  aelkyn.cpp  aelkyn.hpp  application.cpp  application.hpp  main.cpp  window.cpp  window.hpp
src/assets/: model.cpp  model.hpp
src/components/: camera.hpp
src/core/: constants.hpp  rendertypes.hpp  utils.hpp  vulkan.cpp  vulkan.hpp  window.cpp  window.hpp
src/game/: input.hpp
src/gpu/: '  :w  []  buffer.cpp  buffer.hpp  commands.cpp  commands.hpp  context.cpp  context.hpp  device.cpp  device.hpp  frames.cpp  frames.hpp  pipeline.cpp  pipeline.hpp  renderer.cpp  renderer.hpp  swapchain.cpp  swapchain.hpp  texture.cpp  texture.hpp  window.cpp  window.hpp
src/renderer/: device.cpp  device.hpp  swapchain.hpp
